fix: overflow x was fixed

--- a/src/styles/sidebar_style.scss
+++ b/src/styles/sidebar_style.scss
@@ -2,10 +2,12 @@
 body {
   margin: 0;
   line-height: normal;
+  overflow: hidden;
+  
 }
 .sidebar {
+  height: 100vh;
   display: inline-flex;
-  height: 972px;
   width: 326px;
   padding: 16px;
   flex-direction: column;
@@ -20,6 +22,7 @@ body {
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   transform: translateZ(0);
   will-change: width, padding;
+  
 
   .sidebar.collapsed .header .toggle {
     position: absolute;
@@ -365,6 +368,7 @@ margin-top: 16px; /* Reduced margin-top from 74.65px to 16px */
 
   .menu {
     max-height: calc(100vh - 80px);
+    overflow-x: hidden;
 
     width: 294px;
     height: 786.29px;
